# sas-viya-dmml-pipelines

./: .gitignore  README.md  pyproject.toml  verify_setup.py
docs/: QUICKSTART.md
examples/clustering/: README.md
examples/data_manipulation/: README.md
examples/metadata_operations/: README.md
examples/modeling/: README.md
examples/preprocessing/: README.md
examples/visualization/: README.md
machine_learning_pipeline_automation/config/: README.md  default_config.yaml  example_usage.py  project_config.yaml
machine_learning_pipeline_automation/utils/: __init__.py  config.py  data_io.py  macro_variables.py  metadata.py  partitioning.py
sas_to_python/: __init__.py
tests/: test_utils.py
utils/: __init__.py  data_utils.py  reporting_utils.py
