[tool.poetry]
name = "sas-to-python-examples"
version = "0.1.0"
description = "Python translations of SAS Code node examples for machine learning pipelines"
authors = ["SAS Viya Team"]
readme = "README.md"
packages = [{include = "sas_to_python"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
statsmodels = "^0.14.0"
numpy = "^1.24.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
